More HTML testing

--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
 <link rel="stylesheet" href="w3.css">
   <title>Mizzou Wheelchair Basketball</title>
 </head>
-<body background: url("mizzou.jpg")>
-  <div class="w3-container w3-yellow">
+<img src="mizzou.jpg" alt="mizzou" style= "max-width=100px height=100px">
+  <div class = "w3-container w3-yellow">
     <h1>
-      My header!
+      Yellow header!
     </h1>
+    <p>
+      Yellow Paragraph!
+    </P>
   </div>
-  <div>
-    <button value="Button">
+  <div class = "w3-container w3-pale-red w3-hover-black w3-hover-text-white">
+    <h1>
+      Pale Red Header!
+    </h1>
+    <p>
+      Pale Red Paragraph!
+    </p>
   </div>
+
 </body>
 </html>
